--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu primeiro projeto</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <header> 
+            <h1>ANIMAÇÕES</h1>
+            <nav>
+                <a href="#">home</a>
+                <a href="#">about us</a>
+            </nav>
+    </header>
     <h3>Intro Moominvalley 1990</h3>
     <iframe width="640" height="480" src="https://www.youtube.com/embed/Ts6Nd9imTwg" title="Moomin 1990 Japanese Intro HD" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    
 
